# PGSE

./: CMakeLists.txt  README.md
data/: corn_cropped_2.ply  filtered.pcd  ver2.ply
src/: main.cpp
tools/: demo.py  open3d_test.ipynb  pcl_crop.py  ply_viewer.py  preprocessing.ipynb  requirements.txt  skeletor.ipynb
tools/pc_skeletor/: download.py  laplacian.py  skeletor.py  utility.py
